# rustycises

./: .gitignore  README.md
quiz_game/: Cargo.toml  problems.csv
quiz_game/src/: lib.rs  main.rs
quiz_game/tests/: cli.rs
rocket_urlshort/: Cargo.toml  README.md  url_map.sqlite3
rocket_urlshort/migrations/2020-03-17-034015_create_urls/: up.sql
rocket_urlshort/src/db/: mod.rs  models.rs  schema.rs
