[package]
name = "quiz_game"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1"
serde = {version = "1", features = ["derive"]}
rand = "0.7"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"